# puzzle2

./: .gitignore  404.html  LICENSE  MANIFEST.in  README.md  index.html  setup.cfg  sitemap.xml  vscode_snipped.json
.github/workflows/: test.yml
batch/introduction/: index.html
batch/sample/: index.html
concept/: index.html
img/: Thumbs.db
installation/: index.html
search/: search_index.json
src/puzzle2/: Piece.py  Puzzle.py  PuzzleBatch.py  PzLog.py  PzTask.py  __init__.py  batch_kicker.py  log.template  log.template.json  log.template.yml  log2.template  pz_batch.py  pz_config.py  pz_env.py  run_process.py  task.template
src/puzzle2/plugins/: __init__.py
src/puzzle2/tests_support/: matrix.py
testing/dcc/: index.html
tests/: README.md  conftest.py
tests/dcc/batch/: test_bat_dcc.py  test_batch_dcc.py
tests/dcc/deadline/: test_submit.py
tests/dcc/houdini/: README.md
tests/integration/: test_batch_kicker_local.py  test_config_consistency.py  test_puzzle_core.py
tests/log/: test.log.template.yml
tests/support/: matrix.py
tests/tests_data/: README_convert_test.md  convert.yml
tests/unit/: test_pzlog_scoped.py  test_pztask_unit.py  test_run_process_artifacts.py
tests/win/: normal_mode_test02.py  test_file_mode.py  test_normal_mode.py
usage/config/: index.html
usage/context/: index.html
usage/deadline/: index.html
usage/logging/: index.html
usage/pipeline/: index.html
usage/response/: index.html
usage/rule/: index.html
usage/run_process/: index.html
usage/task/: index.html
usage/tips/: index.html
(+72 files in other folders)
