[metadata]
name = puzzle2
description = simple job framework
author = Goh.Hattori, Narimitu.Ozaki
license = MIT
version = 1.0.0
platform = linux, win32
classifiers = 
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9

[options]    
packages = puzzle2
install_requires = 
    pyyaml
python_requires = >=2.7
package_dir = 
    =src

zip_safe = False

[options.extras_require]
testing = 
    flake8