[metadata]
name = puzzle2
description = simple job framework
author = Goh.Hattori, Narimitu.Ozaki
license = MIT
version = 2.0.0
platform = linux, win32
classifiers = 
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]    
packages = puzzle2
install_requires = 
    pyyaml
python_requires = >=3.7
package_dir = 
    =src

zip_safe = False
include_package_data = True

[options.extras_require]
testing = 
    flake8